# redis-arXiv-search

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-cloud-redis.yml  docker-local-redis.yml  install-local.sh  run-local.sh
.github/workflows/: run_tests.yml
backend/: entrypoint.sh  prestart.sh  pyproject.toml  requirements.txt  scripts.py  setup.cfg  test.ipynb
backend/arxiv/: config.py  embeddings.py  load.py  load_data.py  main.py
backend/arxiv/api/: routes.py
backend/arxiv/embeddings/: __init__.py
backend/arxiv/embeddings/providers/: __init__.py  cohere.py  huggingface.py
backend/arxiv/providers/: __init__.py  huggingface.py
backend/arxiv/schema/: __init__.py  cohere.yaml  huggingface.yaml  openai.yaml  request.py
backend/arxivsearch/: config.py  embeddings.py  load.py  main.py
backend/arxivsearch/api/: main.py  routes.py
backend/arxivsearch/api/routes/: papers.py
backend/arxivsearch/db/: load.py  redis_helpers.py  utils.py
backend/arxivsearch/embeddings/: __init__.py
backend/arxivsearch/embeddings/providers/: __init__.py  cohere.py
backend/arxivsearch/redis/: helpers.py
backend/arxivsearch/schema/: __init__.py  cohere.yaml  huggingface.yaml  index.yaml  models.py  openai.yaml  provider.py  request.py  similarity.py
backend/arxivsearch/tests/: conftest.py  test_vectors.json
backend/arxivsearch/tests/api/routes/: test_papers.py
backend/arxivsearch/tests/db/: test_load.py
backend/arxivsearch/tests/utils/: seed.py  test_vectors.json
backend/arxivsearch/utils/: embeddings.py  utils.py
backend/vecsim_app/: categories.py  config.py  data_utils.py  embeddings.py  entrypoint.sh  load_data.py  main.py  models.py  query.py  search_index.py
backend/vecsim_app/api/: routes.py
backend/vecsim_app/multilabel_classifier/: inference.py
backend/vecsim_app/providers/: __init__.py  cohere.py  huggingface.py  openai.py
backend/vecsim_app/schema/: __init__.py  predict_categories.py  search.py
data/: README.md  arXivPrep.ipynb  arXivPrepSubset.ipynb  categories.py  create-arxiv-embeddings.ipynb  embed.py  multi-gpu-arxiv-embeddings.ipynb
data/embeddings/: arxiv-embeddings-with-distilroberta.ipynb  arxiv-embeddings.ipynb  categories.py
data/multilabel_classifier/: .gitignore  multilabel-inference.ipynb  multilabel-model.ipynb  requirements.txt
data/multilabel_classifier/checkpoint/: model_info.json
data/saturncloud/: single-gpu-arxiv-embeddings.ipynb
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  Layout.tsx  Routes.tsx  api.ts  index.tsx  radio.tsx
frontend/src/components/Search/: index.tsx
frontend/src/components/SearchFilters/: index.tsx  styles.ts
frontend/src/components/SuggestedCategories/: index.tsx  styles.ts
frontend/src/config/: index.tsx
frontend/src/constants/: search_filter.ts
frontend/src/hooks/: useDebounce.ts
frontend/src/styles/: App.css  Card.css  Header.css  Home.css
frontend/src/types/: search.d.ts
frontend/src/ui/AddItemButton/: index.tsx  styles.ts
frontend/src/ui/CopyToClipboard/: index.tsx  styles.ts
frontend/src/ui/LoadingButton/: index.tsx
frontend/src/ui/MultilineSearchField/: index.tsx  styles.ts
frontend/src/ui/SearchBar/: index.tsx
frontend/src/utils/: query_string.ts
frontend/src/views/: Card.tsx  Footer.tsx  Header.tsx  Home.tsx
frontend/~/.nvm/versions/node/v20.12.2/include/node/: config.gypi
k8s/: README.md  backend.yaml  cluster.yaml  redis-vector-db.yaml
new_backend/arxivsearch/: config.py  main.py
new_backend/arxivsearch/api/routes/: papers.py
new_backend/arxivsearch/redis/: load.py
