[metadata]
name = arxivsearch
version = 0.0.1
description = Workshop demo of Redis vector similarity over arXiv papers
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/RedisVentures/redis-arXiv-search
project_urls =
    Source = https://github.com/RedisVentures/redis-arXiv-search

author = Tyler Hutcherson
author_email = tyler.hutcherson@redis.com
contact = Sam Partee
contact_email = sam.partee@redis.com
license = BSD 3
keywords = redis, vector similarity, ai, LLMs
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools>=39.2
include_package_data = True
python_requires = >=3.7
install_requires =
    fastapi
    uvicorn
    pandas
    ipython
    numpy
    redis>=5.0.0
    cohere
    openai
    redisvl==0.0.4
    sentence-transformers==2.2.2
    sentencepiece==0.1.97